welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:38: error: not found: value h
  for (i <- 0 to h-1){
                 ^Array1:40: error: not found: value T
    c=T(i)
      ^